--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -2508,7 +2508,7 @@ div.org-container {
     color: #777;
     border: 1px solid #bdb9b9;
     position: relative;
-    top: -0.3em;
+    margin-top: 0.5em;
   }
   #pastTreatmentsContainer,
   #eventListLoad {
