--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -2286,7 +2286,7 @@
     {% set top_org = current_user.first_top_organization() if current_user else False %}
     <div class="row">
         <div class="col-md-12 col-xs-12">
-            <div id="profileProceduresWrapper" class="profile-item-container editable" data-sections="procedure" data-top-org-id="{{top_org.id if top_org}}" data-top-org-name="{{top_org.name if top_org}}">
+            <div id="profileProceduresWrapper" class="profile-item-container editable" data-sections="procedure" data-top-org-id="{{top_org.id if top_org}}" data-top-org-name="{{top_org.name if top_org}}" {% if person and person.id == current_user.id %}data-user-view="true"{% endif %}>
                 <input type="hidden" id="profileProcSubjectId" value="{{person.id if person}}" />
                 <input type="hidden" id="profileProcCurrentUserId" value="{{current_user.id if current_user}}" />
                 <h4 id="clinicalDataLoc" class="profile-item-title index-item">{% if person and person.id == current_user.id %}{{_("My Treatments")}}{%else%}{{ _("Clinical Data") }}{% endif %}</h4>
