--- a/portal/gil/templates/gil/what-is-prostate-cancer.html
+++ b/portal/gil/templates/gil/what-is-prostate-cancer.html
@@ -19,12 +19,12 @@
           <div class="mini-boxes mini-boxes--theme-gray mini-boxes--half-width">
             <div class="mini-boxes__item">
               <div class="mini-box">
-                <p class="mini-box__copy">{{_("Prostate cancer is the most common non-skin cancer in the United States, affecting 1 in 7 men.")}}</p>
+                <p class="mini-box__copy">{{_("Prostate cancer is the most common non-skin cancer in the United States, affecting 1 in 8 men.")}}</p>
               </div>
             </div>
             <div class="mini-boxes__item">
               <div class="mini-box">
-                <p class="mini-box__copy">{{_("In 2015, approximately 220,800 men will be diagnosed with prostate cancer, and more than 27,540 men will die from the disease.")}}</p>
+                <p class="mini-box__copy">{{_("In 2015, approximately 220,800 men were diagnosed with prostate cancer, and more than 27,540 men died from the disease.")}}</p>
               </div>
             </div>
             <div class="mini-boxes__item">
