allow empty email address for patient in profile page

--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% from "flask_user/_macros.html" import back_btn, footer %}
 {% block main %}
-{% from "profile_macros.html" import profileName, profileBirthDate, profileEmail, profilePhone, profileAltPhone, profileSaveBtn%}
+{% from "profile_macros.html" import profileName, profileBirthDate, profilePhone, profileAltPhone, profileSaveBtn%}
 {% from "initial_queries_macros.html" import consent_fields %}
 <br/>
 <form id="createProfileForm" data-account="staff" class="form tnth-form to-validate">
