Use CDN hosted versions for consistency.  Translation examples.

--- a/portal/exercise_diet/templates/exercise_diet/diet.html
+++ b/portal/exercise_diet/templates/exercise_diet/diet.html
@@ -15,7 +15,9 @@
                         {{ content|safe }}
                     </div>
                     <div class="modal-footer">
+                        {% trans %}
                         <button type="button" class="btn btn-secondary" data-dismiss="modal"><span>close</span>X</button>
+                        {% endtrans %}
                     </div>
                 </div>
             </div>
