--- a/portal/exercise_diet/templates/exercise_diet/layout.html
+++ b/portal/exercise_diet/templates/exercise_diet/layout.html
@@ -5,20 +5,20 @@
     
     <title>Exercise Diet</title>
 
-    <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
     
-    <link rel="stylesheet" type="text/css" href="https://demo-st.us.truenth.org/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.css" rel="stylesheet">
 <!--     <link rel="stylesheet" type="text/css" href="https://demo.us.truenth.org/gil/static/css/gil.css" rel="stylesheet"> -->
     <link rel="stylesheet" type="text/css" href="https://demo-st.us.truenth.org/css/cpro.css">
-    <link rel="stylesheet" type="text/css" href="//demo.us.truenth.org/static/css/topnav.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/uwcirg/true_nth_usa_portal/develop/portal/static/css/topnav.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ url_for('.static', filename='css/styles.css') }}">
 
 </head>
 <body>
 
-<h1 align="center">TrueNTH Header Goes Here</h1>
+<h1 align="center">{% trans %}"TrueNTH Header Goes Here"{% endtrans %}</h1>
 
 <div class="container" id="mainNavContainer">
     
@@ -27,7 +27,7 @@
         <div class="container-fluid">
             
             <div class="navbar-header">
-                <button class="navbar-toggle collapsed" data-target="#mainNavbar" data-toggle="collapse" type="type">Show TrueNTH USA Exercise and Diet Links</button>
+                <button class="navbar-toggle collapsed" data-target="#mainNavbar" data-toggle="collapse" type="type">{% trans %}"Show TrueNTH USA Exercise and Diet Links"{% endtrans %}</button>
 
 <!--
                 <button class="navbar-toggle collapsed" data-target="#mainNavbar" data-toggle="collapse" type="button">
@@ -39,12 +39,19 @@
             
             </div>
             <div class="navbar-collapse collapse" id="mainNavbar">
+                {% trans
+                    intro_url = url_for('.introduction'),
+                    exercise_url = url_for('.exercise'),
+                    diet_url = url_for('.diet'),
+                    recipes_url = url_for('.recipes')
+                %}
                 <ul class="nav navbar-nav">
-                    <li class="introduction"><a href="/introduction">Home</a></li>
-                    <li class="exercise"><a href="/exercise">Exercise</a></li>
-                    <li class="diet"><a href="/diet">Diet</a></li>
-                    <li class="recipes"><a href="/recipes"><span>Recipes & Tips</span></a></li>
+                    <li class="introduction"><a href="{{ intro_url }}">Home</a></li>
+                    <li class="exercise"><a href="{{ exercise_url }}">Exercise</a></li>
+                    <li class="diet"><a href="{{ diet_url }}">Diet</a></li>
+                    <li class="recipes"><a href="{{ recipes_url }}"><span>Recipes & Tips</span></a></li>
                 </ul>
+                {% endtrans %}
             </div>
         </div>
     </nav>
