Add translation tags

--- a/portal/exercise_diet/templates/exercise_diet/about.html
+++ b/portal/exercise_diet/templates/exercise_diet/about.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<h2>this is the about page</h2>
+<h2>{% trans %}this is the about page{% endtrans %}</h2>
 
     {{ content|safe }}
 
