--- a/portal/exercise_diet/templates/exercise_diet/exercise.html
+++ b/portal/exercise_diet/templates/exercise_diet/exercise.html
@@ -15,7 +15,7 @@
                         {{ content|safe }}
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal"><span>close</span>X</button>
+                        {% trans %}<button type="button" class="btn btn-secondary" data-dismiss="modal"><span>close</span>X</button>{% endtrans %}
                     </div>
                 </div>
             </div>
