--- a/portal/exercise_diet/templates/exercise_diet/recipes.html
+++ b/portal/exercise_diet/templates/exercise_diet/recipes.html
@@ -2,11 +2,11 @@
 
 {% block body %}
     <div>
-        <p>Even when you know which foods the experts recommend, it’s not always easy to add them to your diet. These recipes and shopping tips give you ideas for how to buy, store, and prepare Foods to Choose.</p>
+        <p>{% trans %}Even when you know which foods the experts recommend, it’s not always easy to add them to your diet. These recipes and shopping tips give you ideas for how to buy, store, and prepare Foods to Choose.{% endtrans %}</p>
     </div>
     <div>
         <h4>
-            <a data-toggle="collapse" href="#healthy-fats" aria-expanded="false" class="collapsed" aria-controls="healthy-fats">Healthy Fats from Oils and Nuts</a>
+            <a data-toggle="collapse" href="#healthy-fats" aria-expanded="false" class="collapsed" aria-controls="healthy-fats">{% trans %}Healthy Fats from Oils and Nuts{% endtrans %}</a>
         </h4>
     </div>
     <div id="healthy-fats" class="collapse" role="tabpanel" aria-labelledby="heading1"style="height: 0px;">
@@ -25,7 +25,7 @@
 
     <div>
         <h4>
-            <a data-toggle="collapse" href="#vegetables" aria-expanded="false" class="collapsed" aria-controls="vegetables">Vegetables</a>
+            <a data-toggle="collapse" href="#vegetables" aria-expanded="false" class="collapsed" aria-controls="vegetables">{% trans %}Vegetables{% endtrans %}</a>
         </h4>
     </div>
     <div id="vegetables" class="collapse" role="tabpanel" aria-labelledby="heading1"style="height: 0px;">
@@ -44,7 +44,7 @@
 
     <div>
         <h4>
-            <a data-toggle="collapse" href="#tomatoes" aria-expanded="false" class="collapsed" aria-controls="tomatoes">Cooked tomatoes</a>
+            <a data-toggle="collapse" href="#tomatoes" aria-expanded="false" class="collapsed" aria-controls="tomatoes">{% trans %}Cooked tomatoes{% endtrans %}</a>
         </h4>
     </div>
     <div id="tomatoes" class="collapse" role="tabpanel" aria-labelledby="heading1"style="height: 0px;">
@@ -63,7 +63,7 @@
 
     <div>
         <h4>
-            <a data-toggle="collapse" href="#fish" aria-expanded="false" class="collapsed" aria-controls="fish">Fish</a>
+            <a data-toggle="collapse" href="#fish" aria-expanded="false" class="collapsed" aria-controls="fish">{% trans %}Fish{% endtrans %}</a>
         </h4>
     </div>
     <div id="fish" class="collapse" role="tabpanel" aria-labelledby="heading1"style="height: 0px;">
@@ -82,7 +82,7 @@
 
     <div>
         <h4>
-            <a data-toggle="collapse" href="#alternatives_to_processed_meats" aria-expanded="false" class="collapsed" aria-controls="alternatives_to_processed_meats">Alternatives to Processed Meats</a>
+            <a data-toggle="collapse" href="#alternatives_to_processed_meats" aria-expanded="false" class="collapsed" aria-controls="alternatives_to_processed_meats">{% trans %}Alternatives to Processed Meats{% endtrans %}</a>
         </h4>
     </div>
     <div id="alternatives_to_processed_meats" class="collapse" role="tabpanel" aria-labelledby="heading1"style="height: 0px;">
@@ -104,11 +104,11 @@
     <div class="modal fade" id="recipe-modal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <button type="button" class="btn btn-secondary-top" data-dismiss="modal"><span>close</span>X</button>
-                <div class="modal-body">Loading...
+                {% trans %}<button type="button" class="btn btn-secondary-top" data-dismiss="modal"><span>close</span>X</button>{% endtrans %}
+                <div class="modal-body">{% trans %}Loading...{% endtrans %}
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal"><span>close</span>X</button>
+                    {% trans %}<button type="button" class="btn btn-secondary" data-dismiss="modal"><span>close</span>X</button>{% endtrans %}
                 </div>
             </div>
         </div>
