fix config treatment options, add code to retrieve display string

--- a/portal/templates/patient_profile_create.html
+++ b/portal/templates/patient_profile_create.html
@@ -34,7 +34,7 @@
                     {{profileStudyID(False)}}
                     {{profileSiteID(False)}}
                     {{profileConsentDate()}}
-                    {{profileProcedures(False, user)}}
+                    {{profileProcedures(False, user, treatment_options)}}
                     <div class="divider"></div>
                     <div class="form-group profile-section" id="userOrgs">
                         <label>{{ _("Clinics") }}</label>
