remove duplicate codes, use one endpoint to retrieve treatment options

--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -77,7 +77,7 @@
 
 <div class="core-data-procedure">
 {% if 'procedure' in require %}
-{{profileProcedures(user, user, treatment_options)}}
+{{profileProcedures(user, user)}}
 </div>
 <!--<button type="submit" class="btn btn-lg btn-tnth-primary continue-btn">I'm Done Entering Treatments</button> &nbsp;&nbsp;-->
 <br/>
