remove print and commented out code

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -2319,24 +2319,7 @@
                             <div class="row">
                                 <div class="col-md-6 col-xs-11">
                                     <div class='form-group'>
-                                        <select class='form-control' id='tnthproc'>
-                                            <!--
-                                            {% if treatment_options %}
-                                                {% for key in treatment_options %}
-                                                    <OPTION value="{{key}}">{{treatment_options[key]}}</OPTION>
-                                                {% endfor %}
-                                            {% else %}
-                                                <option value='373818007'>{{ _("Started watchful waiting") }}</option>
-                                                <option value='424313000'>{{ _("Started active surveillance") }}</option>
-                                                <option value='26294005'>{{ _("Radical prostatectomy (nerve-sparing)") }}</option>
-                                                <option value='26294005-nns'>{{ _("Radical prostatectomy (non-nerve-sparing)") }}</option>
-                                                <option value='33195004'>{{ _("External beam radiation therapy") }}</option>
-                                                <option value='228748004'>{{ _("Brachytherapy") }}</option>
-                                                <option value='707266006'>{{ _("Androgen deprivation therapy") }}</option>
-                                                <option value='999999999'>{{ _("None of the above") }}</option>
-                                            {% endif %}
-                                        -->
-                                        </select>
+                                        <select class='form-control' id='tnthproc'></select>
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
