add treatment information, fix treatment options

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -2300,7 +2300,7 @@
             <div id="profileProceduresWrapper" class="profile-item-container editable" data-sections="procedure" data-top-org-id="{{top_org.id if top_org}}" data-top-org-name="{{top_org.name if top_org}}" {% if person and person.id == current_user.id %}data-user-view="true"{% endif %}>
                 <input type="hidden" id="profileProcSubjectId" value="{{person.id if person}}" />
                 <input type="hidden" id="profileProcCurrentUserId" value="{{current_user.id if current_user}}" />
-                <h4 id="clinicalDataLoc" class="profile-item-title index-item">{% if person and person.id == current_user.id %}{{_("My Treatments")}}{%else%}{{ _("Clinical Data") }}{% endif %}</h4>
+                <h4 id="clinicalDataLoc" class="profile-item-title index-item">{% if person and person.id == current_user.id %}{{_("My Treatments")}}{%else%}{{ _("Clinical Data") }}{% endif %}&nbsp;<span class="optional-diplay-text text-muted tnth-hide">{{_("(Optional)")}}</span></h4>
                 <div class="view-container"><div id="procedure_view"></div></div>
                 <div class="edit-container">
                     <p class="text-muted">
@@ -2317,7 +2317,7 @@
                         <div id="procedureForm" class="form-inline event-element">
                             <p class="text-muted"><em>{{ _("Select")}}</em> {{ _("an option") }}:</p>
                             <div class="row">
-                                <div class="col-md-6 col-xs-11">
+                                <div class="col-md-9 col-xs-11">
                                     <div class='form-group'>
                                         <select class='form-control' id='tnthproc'></select>
                                         <div class="help-block with-errors"></div>
